Fixed all i saw, untested

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "type": "project",
     "require": {
         "webmozart/assert": "^1.2",
+        "swiftmailer/swiftmailer": "^6.0",
         "symfony/process": "^3.3",
+        "symfony/filesystem": "^3.3",
         "symfony/console": "^3.3"
     },
     "authors": [
