FIxed psr-4 decl

--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "machbarmacher\\linear_workflow\\": "linear_workflow_src/",
-            "machbarmacher\\letsencrypta\\": "src/"
+            "machbarmacher\\linear_workflow\\": ["linear_workflow_src/"],
+            "machbarmacher\\letsencrypta\\": ["src/"]
         }
     },
     "bin": [
