--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "require": {
         "layershifter/tld-extract": "^1.2",
-        "acmephp/acmephp": "^1.0@beta",
+        "acmephp/acmephp": "^1.0",
         "webmozart/assert": "^1.2",
         "swiftmailer/swiftmailer": "^5.4",
         "symfony/process": "^3.3",
